# aimove_gd_robotchallenge

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: armController.hpp  cameraReader.hpp
launch/: gazebo.launch  joint_run.launch  run.launch  writting_run.launch
src/: armController.cpp  cameraReader.cpp  jointController.cpp  writtingController.cpp
src/D-KHT/: hough.cpp  main.cpp  quadtree_t.h  reader_file.h  sat.h  settings.h
src/RGBDPlaneDetection/: plane_detection.cpp  plane_detection.h
src/RGBDPlaneDetection/MRF2.2/: Makefile
src/RGBDPlaneDetection/peac/: AHCPlaneFitter.hpp
urdf/: env.urdf  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_transmission.xacro  ur.gazebo.xacro  ur3.urdf.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_robot.urdf.xacro
worlds/: simulation.world
