<?xml version="1.0"?>
<package format="2">
  <name>aimove_gd_robotchallenge</name>
  <version>0.0.1</version>
  <description>Robotic arm realtime control from depth camera/description>

  <maintainer email="damien.hervault@mines-paristech.fr">Damien</maintainer>
  <maintainer email="geraud-martin.montchalin@mines-paristech.fr">Géraud</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
