<?xml version="1.0"?>
<package format="2">
  <name>aimove_gd_robotchallenge</name>
  <version>0.0.1</version>
  <description>Robotic arm realtime control from depth camera</description>

  <maintainer email="damien.hervault@mines-paristech.fr">Damien</maintainer>
  <maintainer email="geraud-martin.montchalin@mines-paristech.fr">Géraud</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ros_openpose</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libdlib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_openpose</exec_depend>
  <exec_depend>libdlib</exec_depend>

  <export>
  </export>
</package>
